@@ -1,4 +1,5 @@
 * Mon Feb 26 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.4-0
+- Added support for OEL and Puppet 5
 - Updated testing configurations including GCE suite information,
  .travis.yml and .gitab-ci.yml.
 
